compiler/plc_cfc/src/snapshots/plc_cfc__cfc_parser__tests__model_is_sorted_by_execution_order.snap
---
source: compiler/plc_cfc/src/cfc_parser.rs
expression: "deserializer::visit(src).unwrap()"
---
Pou {
    name: "thistimereallyeasy",
    pou_type: Program,
    body: Body {
        function_block_diagram: FunctionBlockDiagram {
            nodes: {
                1: FunctionBlockVariable(
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 1,
                        negated: false,
                        expression: "a",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                ),
                2: FunctionBlockVariable(
                    FunctionBlockVariable {
                        kind: Output,
                        local_id: 2,
                        negated: false,
                        expression: "b",
                        execution_order_id: Some(
                            2,
                        ),
                        ref_local_id: Some(
                            1,
                        ),
                    },
                ),
                3: FunctionBlockVariable(
                    FunctionBlockVariable {
                        kind: Output,
                        local_id: 3,
                        negated: false,
                        expression: "c",
                        execution_order_id: Some(
                            0,
                        ),
                        ref_local_id: Some(
                            1,
                        ),
                    },
                ),
                4: FunctionBlockVariable(
                    FunctionBlockVariable {
                        kind: Output,
                        local_id: 4,
                        negated: false,
                        expression: "d",
                        execution_order_id: Some(
                            1,
                        ),
                        ref_local_id: Some(
                            1,
                        ),
                    },
                ),
            },
        },
        global_id: None,
    },
    declaration: "\n        PROGRAM thistimereallyeasy\n        VAR\n            a, b, c, d : DINT;\n        END_VAR\n                            ",
}
