compiler/plc_cfc/src/snapshots/plc_cfc__cfc_parser__tests__variable_assignment.snap
---
source: compiler/plc_cfc/src/cfc_parser.rs
expression: pou
---
Pou {
    name: "thistimereallyeasy",
    pou_type: Program,
    body: Body {
        function_block_diagram: FunctionBlockDiagram {
            nodes: {
                2: FunctionBlockVariable(
                    FunctionBlockVariable {
                        kind: Output,
                        local_id: 2,
                        negated: false,
                        expression: "b",
                        execution_order_id: Some(
                            0,
                        ),
                        ref_local_id: Some(
                            1,
                        ),
                    },
                ),
                1: FunctionBlockVariable(
                    FunctionBlockVariable {
                        kind: Input,
                        local_id: 1,
                        negated: false,
                        expression: "a",
                        execution_order_id: None,
                        ref_local_id: None,
                    },
                ),
            },
        },
        global_id: None,
    },
    declaration: "\n        PROGRAM thistimereallyeasy\n        VAR\n            a, b : DINT;\n        END_VAR\n                            ",
}
